<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemCancel"
        android:title="@string/dialog_cancel"
        android:icon="@drawable/ic_close"/>
    <item
        android:id="@+id/itemAppBarBottom"
        android:title="@string/app_bar_bottom"
        android:icon="@drawable/ic_border_bottom"/>
    <item
        android:id="@+id/itemDialogFullscreen"
        android:title="@string/dialog_full_screen"
        android:icon="@drawable/ic_fullscreen"/>
    <item
        android:id="@+id/itemHome"
        android:title="@string/menu_start"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/itemFavorites"
        android:title="@string/menu_favorites"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/itemSettings"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_menu"/>
</menu>