<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding_default"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.AlertDialogFragment">

 <com.google.android.material.button.MaterialButton
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/btnInfo"
     android:text="@string/dialog_info"
     style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChoose"
        android:text="@string/dialog_chooser"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConfirm"
        android:text="@string/dialog_confirm"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFullscreen"
        android:text="@string/dialog_full_screen"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>