<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="@dimen/common_padding_default"
    android:paddingEnd="@dimen/common_padding_default"
    android:paddingTop="@dimen/common_padding_default"
    android:paddingBottom="@dimen/common_padding_bottom_scroll"

    tools:context=".fragments.TextFieldFragment">

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/status_default"
       android:layout_marginTop="@dimen/common_padding_default">
       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="textEmailAddress"/>
   </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_filled_dense"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPrice"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_outlined_enabled"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_outlined_dense_enabled"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:endIconMode="password_toggle"
        app:counterMaxLength="20"
        app:counterEnabled="true"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_custom"
        app:boxStrokeColor="@drawable/stroke_input_edit_text_custom"
        app:boxStrokeWidth="2dp"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_comment_optional"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textMultiLine"
            android:maxLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_capital_letter"
        android:id="@+id/tilCapitalLetter"
        app:boxCornerRadiusBottomStart="@dimen/radius_circle"
        app:boxCornerRadiusBottomEnd="@dimen/radius_circle"
        app:boxCornerRadiusTopEnd="@dimen/radius_circle"
        app:boxCornerRadiusTopStart="@dimen/radius_circle"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_format"
        app:endIconTint="@color/purple_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtCapitalLetter"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>