<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="false"
    android:paddingBottom="@dimen/common_padding_default"
    app:behavior_peekHeight="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:background="@color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/containerHeader"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/teal_200"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnExpanded"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_expand_less"
        android:layout_marginStart="@dimen/common_padding_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bottom_standar_place_title"
        android:textColor="@color/white"
        android:id="@+id/tvTitle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginTop="@dimen/common_padding_default"
        android:layout_marginEnd="@dimen/common_padding_default"
        android:layout_marginStart="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@id/imgBtnExpanded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bottom_standar_place_content"
        android:textColor="@color/white"
        android:id="@+id/tvContent"


        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLink"
        android:text="@string/btnLinkText"
        android:textColor="@color/teal_200"
        android:drawableTop="@drawable/ic_ink"
        app:drawableTint="@color/teal_200"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHeader"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCall"
        android:text="@string/btnCallText"
        android:textColor="@color/teal_200"
        android:drawableTop="@drawable/ic_call"
        app:drawableTint="@color/teal_200"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnLink"
        app:layout_constraintTop_toBottomOf="@id/containerHeader"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/btnSaveText"
        android:textColor="@color/teal_200"
        android:drawableTop="@drawable/ic_save"
        app:drawableTint="@color/teal_200"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintStart_toEndOf="@id/btnLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerHeader"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLink"
        android:layout_marginTop="24dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvChronology"
        android:text="@string/textChronology"
        android:drawableStart="@drawable/ic_timeline"
        app:drawableTint="@color/teal_200"
        android:drawablePadding="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstDivider"
        android:layout_margin="@dimen/common_padding_default"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvAddress"
        android:text="@string/textAddress"
        android:drawableStart="@drawable/ic_location"
        app:drawableTint="@color/teal_200"
        android:drawablePadding="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChronology"
        android:layout_margin="@dimen/common_padding_default"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvSchedule"
        android:text="@string/textSchedule"
        android:drawableStart="@drawable/ic_schedule"
        app:drawableTint="@color/teal_200"
        android:drawablePadding="@dimen/common_padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress"
        android:layout_margin="@dimen/common_padding_default"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSchedule"
        android:layout_marginTop="@dimen/common_padding_default"/>

    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/card_message_demo_large"

        android:id="@+id/tvDescription"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/secondDivider"/>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thirdDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        android:layout_marginTop="24dp"/>
    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:id="@+id/imgPhoto"
        android:src="@drawable/ic_account_circle"
        android:layout_margin="@dimen/common_padding_default"
        app:tint="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thirdDivider"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/askHint"
            app:layout_constraintTop_toTopOf="@id/imgPhoto"
            app:layout_constraintBottom_toBottomOf="@id/imgPhoto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_default"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:layout_constraintStart_toEndOf="@id/imgPhoto">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>