<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkboxFragmentContainer"
    tools:context=".fragments.CheckboxFragment">

   <androidx.constraintlayout.widget.Guideline
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:orientation="vertical"
       android:id="@+id/chkGuideline"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintGuide_percent="0.6"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkEnable"
        app:layout_constraintStart_toEndOf="@id/chkGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/common_padding_default"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChkEnable"
        android:text="@string/status_enabled"
        app:layout_constraintEnd_toStartOf="@id/chkGuideline"
        app:layout_constraintTop_toTopOf="@id/chkEnable"
        app:layout_constraintBottom_toBottomOf="@id/chkEnable"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkDisable"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/chkGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkEnable"
        android:layout_margin="@dimen/common_padding_default"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChkDisable"
        android:text="@string/status_disabled"
        app:layout_constraintEnd_toStartOf="@id/chkGuideline"
        app:layout_constraintTop_toTopOf="@id/chkDisable"
        app:layout_constraintBottom_toBottomOf="@id/chkDisable"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkDisableSelected"
        android:enabled="false"
        android:checked="true"
        app:layout_constraintStart_toEndOf="@id/chkGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkDisable"
        android:layout_margin="@dimen/common_padding_default"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChkDisableSelected"
        android:text="@string/status_disabled_selected"
        app:layout_constraintEnd_toStartOf="@id/chkGuideline"
        app:layout_constraintTop_toTopOf="@id/chkDisableSelected"
        app:layout_constraintBottom_toBottomOf="@id/chkDisableSelected"/>

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
  android:id="@+id/tvIndeterminateChk"
  android:text="@string/status_enabled_indeterminate"
  app:layout_constraintEnd_toStartOf="@id/chkGuideline"
  app:layout_constraintTop_toBottomOf="@id/tvChkDisableSelected"
  android:layout_marginTop="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>